# SimpleRPC

./: CMakeLists.txt  README.md
cmake/: SimpleRPCGenerator.cmake
examples/: CMakeLists.txt
examples/calculator/: .gitignore  CMakeLists.txt
examples/calculator/rpc_info/: ops.c  ops.c.json
examples/repl/: CMakeLists.txt  main.c
scripts/: generate_server.py
simple_rpc/: CMakeLists.txt
simple_rpc/include/simple_rpc/: rpc_client.h  rpc_deserialize.h  rpc_procedure.h  rpc_result.h  rpc_serialize.h  rpc_server.h  rpc_value.h  rpc_value_reader.h
simple_rpc/src/simple_rpc/: rpc_client.c  rpc_deserialize.c  rpc_result.c  rpc_serialize.c  rpc_server.c  rpc_value.c  rpc_value_reader.c
util/: CMakeLists.txt
util/include/util/: byte_buffer.h  byte_buffer_io.h
util/src/util/: byte_buffer.c  byte_buffer_io.c
